# bazel-demo-app

./: BUILD.bazel  WORKSPACE  bazel-bin  bazel-demo-greeting  bazel-out  bazel-testlogs  go.mod
cmd/: BUILD.bazel  main.go
handlers/: BUILD.bazel  handler.go
pkg/greetings/: BUILD.bazel  greetings.go  greetings_test.go
pkg/hello/: hello.go
